GNOME Bugzilla – Bug 749896
Possible NULL dereference
Last modified: 2015-07-13 09:27:41 UTC
gnome-control-center-3.14.5/panels/printers/pp-utils.c:4234:37: warning: Array access (from variable 'name') results in a null pointer dereference # name[strlen (lower_name)] = '\0'; # ~~~~ ^ # 4232| { # 4233| occurrence[0] = '\0'; # 4234|-> name[strlen (lower_name)] = '\0'; # 4235| } # 4236|
Created attachment 304019 [details] [review] Check whether we have a device name Attached patch fixes the problem for me.
Review of attachment 304019 [details] [review]: Sure.
Comment on attachment 304019 [details] [review] Check whether we have a device name Thank you for the review, I've pushed the patch into master, 3.16 and 3.14.